--- a/src/Components/Heading/style.scss
+++ b/src/Components/Heading/style.scss
@@ -1,8 +1,12 @@
 
 .heading {
     padding: 16px 0;
-    font-size: 24px;
-    font-weight: bold;
-    font-family: raleway;
-    color: #fff;
+    background-color: #29d;
+
+    &__text {
+        font-size: 24px;
+        font-weight: bold;
+        font-family: raleway;
+        color: #fff;
+    }
 }
