Global styles organized.

--- a/pages/home/index.scss
+++ b/pages/home/index.scss
@@ -1,13 +1,2 @@
 
-@import 'index.responsive.scss';
-
-
-// Global Styles
-
-body {
-    margin: 0;
-}
-
-.container {
-    margin: 0 16px;
-}
+@import '../../src/Styles/styles.scss';
