--- a/src/Components/Footer/style.scss
+++ b/src/Components/Footer/style.scss
@@ -5,13 +5,32 @@ footer {
     background-color: $secondary-color;
     padding: 32px 0;
 
-    .menu-link {
-        padding: 0 8px;
-        font-family: raleway;
-        border-right: 1px solid $white-07;
+    .footer__menu {
+        display: flex;
 
-        &:last-child {
-            border: none;
+        .menu-item {
+            padding: 0 8px;
+            border-right: 1px solid $white-07;
+    
+            a {
+                font-size: 14px;
+                font-family: raleway;
+                color: $white-07;
+            }
+
+            &:first-child {
+                padding-left: 0;
+            }
+    
+            &:last-child {
+                border: none;
+            }
         }
     }
+
+    .footer__copyright {
+        color: $white-05;
+        margin: 16px 0;
+    }
+
 }
