--- a/src/Components/Footer/style.scss
+++ b/src/Components/Footer/style.scss
@@ -2,7 +2,7 @@
 @import '../../Styles/variables.scss';
 
 footer {
-    background-color: $secondary-color;
+    background-color: $secondary-color--darker;
     padding: 32px 0;
 
     .footer__menu {
