--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -1,6 +1,9 @@
 
-$primary-color: #29d;
-$secondary-color: #222;
+$primary-color: #397efe;
+$secondary-color: #414141;
+$secondary-color--darker: #1e1e1e;
 
 $white-07: rgba(255, 255, 255, 0.7);
 $white-05: rgba(255, 255, 255, 0.5);
+
+$black-02: rgba(0, 0, 0, 0.2);
