--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -9,6 +9,13 @@ body {
     margin: 0;
 }
 
+#__next {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
 a {
     text-decoration: none;
 }
