--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -6,4 +6,5 @@ $secondary-color--darker: #1e1e1e;
 $white-07: rgba(255, 255, 255, 0.7);
 $white-05: rgba(255, 255, 255, 0.5);
 
+$black-05: rgba(0, 0, 0, 0.5);
 $black-02: rgba(0, 0, 0, 0.2);
