--- a/src/Components/GridItem/style.scss
+++ b/src/Components/GridItem/style.scss
@@ -1,4 +1,63 @@
+
+@import '../../Styles/variables.scss';
+
 .GridItem {
     flex: calc(1/7);
     padding: 16px;
+    font-family: ubuntu;
+    cursor: pointer;
+
+    &__Inner {
+        min-height: 160px; // Local Image Needed
+        position: relative;
+        border-radius: 4px;
+        overflow: hidden;
+        box-shadow: 0 0 40px 10px $black-02;
+        transition:
+            transform 0.3s ease,
+            box-shadow 0.3s ease;
+
+        &:hover {
+            transform: perspective(800px) translateZ(80px);
+            box-shadow: 0 0 20px 5px $black-02;
+
+            img {
+                transition: transform 1s ease;
+                transform: scale(1.2);
+            }
+
+            .overlay {
+                opacity: 0.6;
+            }
+        }
+
+        img {
+            transition: transform 0.3s ease;
+            width: 100%;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+            font-size: 32px;
+            opacity: 0.3;
+            background-color: $secondary-color;
+            transition: opacity 0.3s ease;
+        }
+    }
+
+    &__Desc {
+        padding: 16px 0;
+        color: $secondary-color;
+        font-weight: bold;
+        font-size: 16px;
+        text-align: center;
+    }
 }
