Global styles imported in _app.tsx. GridItem width set to be 1/7 of container. Fetching JSON in actions in a verbose way. Movies Action and Props types defined.

--- a/src/Components/GridItem/style.scss
+++ b/src/Components/GridItem/style.scss
@@ -2,7 +2,7 @@
 @import '../../Styles/variables.scss';
 
 .GridItem {
-    flex: calc(1/7);
+    width: calc((100% - 7 * 32px) / 7);
     padding: 16px;
     font-family: ubuntu;
     cursor: pointer;
