Search styled. Custom dropdown needed. .icon is global class now.

--- a/src/Components/Footer/style.scss
+++ b/src/Components/Footer/style.scss
@@ -44,11 +44,11 @@ footer {
             display: flex;
         }
 
-        .icon {
-            width: 24px;
-            height: 24px;
-            margin: 0 8px;
-        }
+        // .icon {
+        //     width: 24px;
+        //     height: 24px;
+        //     margin: 0 8px;
+        // }
 
         .badge {
             margin: 0 8px;
