Created a global class for common styles. Low opacity primary color added as variable. Created Dropdown section Updated ISearch.IState

--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -1,5 +1,5 @@
 
-// @import 'variables.scss';
+@import 'variables.scss';
 @import 'responsive.scss';
 
 
@@ -34,4 +34,10 @@ a {
     width: 24px;
     height: 24px;
     margin: 0 8px;
+}
+
+.shadow-radius-box {
+    box-shadow: 0 0 40px $black-02;
+    border-radius: 4px;
+    overflow: hidden;
 }
