--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -1,7 +1,10 @@
 
 $primary-color: #397efe;
+$primary-color--lighter: rgba(57, 126, 254, 0.3);
+
 $secondary-color: #414141;
 $secondary-color--darker: #1e1e1e;
+
 
 $white-07: rgba(255, 255, 255, 0.7);
 $white-05: rgba(255, 255, 255, 0.5);
