--- a/src/Components/Search/style.scss
+++ b/src/Components/Search/style.scss
@@ -1,8 +1,11 @@
 
 @import '../../Styles/variables.scss';
 
+
 .search {
     margin: 32px 0 16px;
+    font-family: ubuntu;
+    font-weight: bold;
 
     form {
         display: flex;
@@ -13,9 +16,6 @@
             display: flex;
             align-items: center;
             width: calc(100% / 7 * 3 - 16px);
-            overflow: hidden;
-            border-radius: 4px;
-            box-shadow: 0 0 40px $black-02;
     
             input {
                 width: 100%;
@@ -23,8 +23,6 @@
                 border: none;
                 background-color: transparent;
                 color: $secondary-color;
-                font-family: ubuntu;
-                font-weight: bold;
                 outline: none;
             }
         
@@ -40,7 +38,53 @@
         }
     
         .search__sort {
+            overflow: unset;
 
+            .sort__control {
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                cursor: pointer;
+
+                &__selected {
+                    padding: 8px 16px;
+                    color: $secondary-color;
+                }
+
+                &__indicator {
+
+                    .icon {
+                        margin: 8px;
+                    }
+                }
+
+                &__dropdown {
+                    position: absolute;
+                    z-index: 1;
+                    top: 100%;
+                    left: 0;
+                    display: none;
+                    width: 100%;
+                    background-color: #fff;
+
+                    .dropdown__item {
+                        padding: 8px 16px;
+                        transition:
+                            background-color 0.2s ease,
+                            color 0.2s ease;
+
+                        &:hover {
+                            background-color: $primary-color--lighter;
+                        }
+
+                        &.selected {
+                            background-color: $primary-color;
+                            color: #fff;
+                        }
+                    }
+                }
+            }
         }
     }
 }
