--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -10,4 +10,5 @@ $white-07: rgba(255, 255, 255, 0.7);
 $white-05: rgba(255, 255, 255, 0.5);
 
 $black-05: rgba(0, 0, 0, 0.5);
+$black-04: rgba(0, 0, 0, 0.4);
 $black-02: rgba(0, 0, 0, 0.2);
