Toast component basically styled. Back in the dropdown component, ref is initializing as it is getting defined insted of in constructor due to 'Cannot read property 'contains' of null'.

--- a/src/Components/Toast/style.scss
+++ b/src/Components/Toast/style.scss
@@ -1,3 +1,23 @@
+
+@import '../../Styles/variables.scss';
+
 .Toast {
+
+    span {
+        border-radius: 4px;
+        padding: 16px;
+        font-size: 16px;
+        font-weight: bold;
+        font-style: italic;
+        color: #fff;
+
+        &.loading {
+            background-color: $primary-color;
+        }
     
+        &.error {
+            background-color: red;
+        }
+    }
+
 }
