--- a/src/Components/GridItem/style.scss
+++ b/src/Components/GridItem/style.scss
@@ -1,81 +1,101 @@
-
 @import '../../Styles/variables.scss';
 
+@keyframes loading {
+    from {}
+    to { background-position-x: 100px }
+}
+
 .GridItem {
-    width: calc((100% - 7 * 32px) / 7);
-    padding: 16px;
-    font-family: ubuntu;
-    cursor: pointer;
-    opacity: 0;
-    transition: opacity 0.2s ease;
+	width: calc((100% - 7 * 32px) / 7);
+	padding: 16px;
+	font-family: ubuntu;
+	cursor: pointer;
 
-    &.loaded {
-        opacity: 1;
-    }
+	&.loaded {
 
-    &:hover {
-
-        .GridItem__Inner {
-            transform: translateZ(50px);
-            box-shadow: 0 0 20px 0 $black-04;
+		.poster {
+            animation: unset;
 
             img {
-                transition: transform 1s ease;
-                transform: scale(1.1);
-            }
-
-            .overlay {
                 opacity: 1;
             }
-
         }
-
-        .GridItem__Desc {
-            color: $primary-color;
-            transform: translateZ(30px);
+        
+        span {
+            color: $secondary-color;
+            background-color: unset;
         }
-    }
+	}
 
-    &__Inner {
-        min-height: 160px;
-        position: relative;
-        border-radius: 4px;
-        overflow: hidden;
-        box-shadow: 0 0 10px 0 $black-02;
-        transition:
-            transform 0.3s ease,
-            box-shadow 0.3s ease;
+	&:hover {
+		.GridItem__Inner {
+			transform: translateZ(50px);
+            box-shadow: 0 0 20px 0 $black-04;
 
-        img {
-            transition: transform 0.3s ease;
-            width: 100%;
+			img {
+				transition: transform 1s ease;
+				transform: scale(1.1);
+			}
+
+			.overlay {
+				opacity: 1;
+			}
+		}
+
+		.GridItem__Desc {
+			color: $primary-color;
+			transform: translateZ(30px);
+		}
+	}
+
+	&__Inner {
+		min-height: 160px;
+		position: relative;
+		border-radius: 4px;
+		overflow: hidden;
+		box-shadow: 0 0 10px 0 $black-02;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        
+        .poster {
+            background: linear-gradient(to right, $black-02, #bbb 50px, $black-02 100px);
+            animation: loading normal infinite 2s ease;
+
+            img {
+                transition: transform 0.3s ease, opacity 0.6s ease;
+                width: 100%;
+                opacity: 0;
+            }
+		}
+
+		.overlay {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-weight: bold;
+			font-size: 24px;
+			opacity: 0;
+			background-color: $primary-color--lighter;
+			transition: opacity 0.3s ease;
+		}
+	}
+
+	&__Desc {
+		padding: 16px 0;
+		font-weight: bold;
+		font-size: 12px;
+		text-align: center;
+		transition: transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+        
+        span {
+            color: transparent;
+            background-color: #aaa;
+            transition: color 0.3s ease, background-color 0.3s ease;
+            border-radius: 4px;
         }
-
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-            font-size: 32px;
-            opacity: 0;
-            background-color: $primary-color--lighter;
-            transition: opacity 0.3s ease;
-        }
-    }
-
-    &__Desc {
-        padding: 16px 0;
-        color: $secondary-color;
-        font-weight: bold;
-        font-size: 14px;
-        text-align: center;
-        transition:
-            transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28),
-            color 0.3s ease;
-    }
+	}
 }
