--- a/src/Components/Toast/style.scss
+++ b/src/Components/Toast/style.scss
@@ -1,45 +1,45 @@
-
 @import '../../Styles/variables.scss';
 
 .toast {
-
-     &__container {
-        border-radius: 4px;
-        padding: 8px 16px;
-        font-size: 16px;
-        font-family: ubuntu;
+	&__container {
+		border-radius: 4px;
+		padding: 8px 16px;
+		font-size: 16px;
+		font-family: ubuntu;
         color: $white-07;
+        transform-origin: top left;
+        background-color: $primary-color;
+		transition: background-color 0.4s,
+			transform 0.2s cubic-bezier(0.32, 2.12, 0.58, 1),
+            box-shadow 0.2s cubic-bezier(0.32, 2.12, 0.58, 1);
 
-        h4 {
-            margin: 0;
+        .quote {
+            font-style: italic;
             color: #fff;
         }
 
-        &__text {
-            display: flex;
-            padding: 16px 0;
+        .movie {
+            margin: 0 8px;
         }
 
-        &.loading {
-            background-color: $primary-color;
-
-            .quote {
-                font-style: italic;
-                color: #fff;
-            }
-
-            .movie {
-                margin: 0 8px;
-            }
-
-            .year {
-                font-weight: bold;
-            }
+        .year {
+            font-weight: bold;
         }
-    
-        &.error {
+
+		h4 {
+			margin: 8px 0;
+			color: #fff;
+		}
+
+		&__text {
+			display: flex;
+			padding: 16px 0;
+		}
+
+		&.error {
             background-color: red;
-        }
-    }
-
+            box-shadow: 0 0 40px 10px $black-02;
+			transform: perspective(800px) translateZ(80px) rotateZ(5deg);
+		}
+	}
 }
