--- a/src/Components/GridItem/style.scss
+++ b/src/Components/GridItem/style.scss
@@ -35,7 +35,10 @@
 			box-shadow: 0 0 20px 0 $black-04;
 
 			img {
-				transition: transform 1s ease;
+				transition:
+					transform 1s ease,
+					opacity 0.6s ease,
+					filter 0.3s ease;
 				transform: scale(1.1);
 			}
 
@@ -72,7 +75,10 @@
 				display: block;
 				width: 100%;
 				opacity: 0;
-				transition: transform 0.3s ease, opacity 0.6s ease;
+				transition:
+					transform 0.3s ease,
+					opacity 0.6s ease,
+					filter 0.3s ease;
 			}
 		}
 
