--- a/src/Components/Search/style.scss
+++ b/src/Components/Search/style.scss
@@ -86,13 +86,14 @@
                             color 0.2s ease;
 
                         &:hover {
-                            background-color: $primary-color--lighter;
+                            background-color: $primary-color;
+                            color: #fff
                         }
 
-                        &.selected {
-                            background-color: $primary-color;
-                            color: #fff;
-                        }
+                        // &.selected {
+                        //     background-color: $primary-color;
+                        //     color: #fff;
+                        // }
                     }
                 }
             }
