--- a/src/Components/Heading/style.scss
+++ b/src/Components/Heading/style.scss
@@ -1,4 +1,5 @@
 @import '../../Styles/variables.scss';
+@import 'index.responsive.scss';
 
 .header__main {
 	position: relative;
@@ -16,7 +17,7 @@
 		.brand {
 			position: relative;
 			z-index: 1;
-			font-size: 32px;
+			font-size: 20px;
 			font-weight: bold;
 			color: #fff;
 			cursor: pointer;
@@ -24,6 +25,7 @@
 
 		nav {
 			display: flex;
+			flex-direction: column;
 			font-size: 14px;
 
 			.menu-item {
