Header responsified successfully.
Added brand new menu icon.

Header keeps UI state now.
Updated it's IState accordingly.

--- a/src/Components/Heading/index.responsive.scss
+++ b/src/Components/Heading/index.responsive.scss
@@ -61,12 +61,20 @@
         .brand {
             font-size: 32px;
         }
+
+        .menu-toggle {
+            display: none;
+        }
         
         .nav-pane {
         
             nav {
                 flex-direction: unset;
             }
+        }
+
+        .header__sub__title {
+            font-size: 24px;
         }
     }
     
