--- a/src/Components/Heading/style.scss
+++ b/src/Components/Heading/style.scss
@@ -23,6 +23,10 @@
 			cursor: pointer;
 		}
 
+		.menu-toggle svg {
+            fill: #fff;
+        }
+
 		nav {
 			display: flex;
 			flex-direction: column;
@@ -52,7 +56,7 @@
 	box-shadow: 0 0 40px 10px $black-05;
 
 	&__title {
-		font-size: 24px;
+		font-size: 18px;
 		font-weight: bold;
 		font-family: raleway;
 		color: #fff;
