--- a/src/Components/Footer/style.scss
+++ b/src/Components/Footer/style.scss
@@ -1,5 +1,6 @@
 
 @import '../../Styles/variables.scss';
+@import 'index.responsive.scss';
 
 footer {
     background-color: $secondary-color--darker;
@@ -7,23 +8,15 @@ footer {
 
     .footer__menu {
         display: flex;
+        flex-direction: column;
 
         .menu-item {
-            padding: 0 8px;
-            border-right: 1px solid $white-07;
+            padding: 4px 0;
     
             a {
                 font-size: 14px;
                 font-family: raleway;
                 color: $white-07;
-            }
-
-            &:first-child {
-                padding-left: 0;
-            }
-    
-            &:last-child {
-                border: none;
             }
         }
     }
@@ -31,30 +24,31 @@ footer {
     .footer__copyright {
         color: $white-05;
         margin: 16px 0;
+        font-size: 12px;
     }
 
     .footer__backlinks {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         padding: 32px 0;
 
         .social,
         .marketplace {
             display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        // .icon {
-        //     width: 24px;
-        //     height: 24px;
-        //     margin: 0 8px;
-        // }
+        .icon {
+            margin: 16px 0;
+        }
 
         .badge {
             margin: 0 8px;
 
             &:last-child {
-                height: 40px;
+                height: 50px;
             }
         }
     }
