--- a/src/Components/GridItem/style.scss
+++ b/src/Components/GridItem/style.scss
@@ -1,4 +1,5 @@
 @import '../../Styles/variables.scss';
+@import 'index.responsive.scss';
 
 @keyframes loading {
 	from {
@@ -9,8 +10,9 @@
 }
 
 .GridItem {
-	width: calc((100% - 7 * 32px) / 7);
+	width: 50%;
 	padding: 16px;
+	box-sizing: border-box;
 	font-family: ubuntu;
 	cursor: pointer;
 
