--- a/src/Components/Heading/style.scss
+++ b/src/Components/Heading/style.scss
@@ -12,7 +12,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 16px 0;
+		padding: 8px 0;
 
 		.brand {
 			position: relative;
@@ -23,9 +23,14 @@
 			cursor: pointer;
 		}
 
-		.menu-toggle svg {
-            fill: #fff;
-        }
+		.menu-toggle {
+			width: 32px;
+			height: 32px;
+
+			svg {
+				fill: #fff;
+			}
+		}
 
 		nav {
 			display: flex;
@@ -43,6 +48,7 @@
 				}
 
 				&.cta {
+					text-align: center;
 					background-color: $secondary-color;
 				}
 			}
@@ -51,7 +57,7 @@
 }
 
 .header__sub {
-    padding: 16px 0;
+    padding: 8px 0;
     background-color: $secondary-color;
 	box-shadow: 0 0 40px 10px $black-05;
 
