--- a/src/Components/Search/style.scss
+++ b/src/Components/Search/style.scss
@@ -1,6 +1,5 @@
-
 @import '../../Styles/variables.scss';
-
+@import 'index.responsive.scss';
 
 .search {
     margin: 32px 0 16px;
@@ -11,11 +10,15 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        flex-wrap: wrap;
+
+        > div {
+            width: 100%;
+        }
 
         .search__input {
             display: flex;
             align-items: center;
-            width: calc(100% / 7 * 3 - 16px);
     
             input {
                 width: 100%;
@@ -41,6 +44,7 @@
     
         .search__sort {
             overflow: unset;
+            margin: 16px 0 0;
 
             .sort__control {
                 position: relative;
