--- a/src/Components/Search/index.responsive.scss
+++ b/src/Components/Search/index.responsive.scss
@@ -15,5 +15,9 @@
                 margin: unset;
             }
         }
+
+        .search__toggle {
+            display: none;
+        }
     }
 }
