--- a/src/Components/Heading/style.scss
+++ b/src/Components/Heading/style.scss
@@ -1,70 +1,82 @@
 @import '../../Styles/variables.scss';
 @import 'index.responsive.scss';
 
-.header__main {
-	position: relative;
-	z-index: 1;
-	background-color: $primary-color;
-	box-shadow: 0 0 20px 10px $black-05;
-	font-family: raleway;
-
-	> .container {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		padding: 8px 0;
-
-		.brand {
-			position: relative;
-			z-index: 1;
-			font-size: 20px;
-			font-weight: bold;
-			color: #fff;
-			cursor: pointer;
-		}
-
-		.menu-toggle {
-			width: 32px;
-			height: 32px;
-
-			svg {
-				fill: #fff;
-			}
-		}
-
-		nav {
-			display: flex;
-			flex-direction: column;
-			font-size: 14px;
-
-			.menu-item {
-				padding: 8px 16px;
-				color: #fff;
-				margin: 0 16px;
-				cursor: pointer;
-
-				&:last-child {
-					margin-right: 0;
-				}
-
-				&.cta {
-					text-align: center;
-					background-color: $secondary-color;
-				}
-			}
-		}
-	}
+.placeholder {
+	height: 85px;
 }
 
-.header__sub {
-    padding: 8px 0;
-    background-color: $secondary-color;
-	box-shadow: 0 0 40px 10px $black-05;
+.header {
+	position: fixed;
+	top: 0;
+	z-index: 2;
+	width: 100%;
 
-	&__title {
-		font-size: 18px;
-		font-weight: bold;
+	&__main {
+		position: relative;
+		z-index: 1;
+		background-color: $primary-color;
+		box-shadow: 0 0 20px 10px $black-05;
 		font-family: raleway;
-		color: #fff;
+	
+		> .container {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			padding: 8px 0;
+	
+			.brand {
+				position: relative;
+				z-index: 1;
+				font-size: 20px;
+				font-weight: bold;
+				color: #fff;
+				cursor: pointer;
+			}
+	
+			.menu-toggle {
+				width: 32px;
+				height: 32px;
+	
+				svg {
+					fill: #fff;
+				}
+			}
+	
+			nav {
+				display: flex;
+				flex-direction: column;
+				font-size: 14px;
+	
+				.menu-item {
+					padding: 8px 16px;
+					color: #fff;
+					margin: 0 16px;
+					cursor: pointer;
+	
+					&:last-child {
+						margin-right: 0;
+					}
+	
+					&.cta {
+						text-align: center;
+						background-color: $secondary-color;
+					}
+				}
+			}
+		}
+	}
+	
+	&__sub {
+		padding: 8px 0;
+		background-color: $secondary-color;
+		box-shadow: 0 0 40px 10px $black-05;
+	
+		&__title {
+			font-size: 18px;
+			font-weight: bold;
+			font-family: raleway;
+			color: #fff;
+		}
 	}
 }
+
