--- a/src/Components/Search/style.scss
+++ b/src/Components/Search/style.scss
@@ -7,64 +7,19 @@
 	font-size: 14px;
 
 	&__toggle {
-		position: fixed;
-		z-index: 1;
-		bottom: 16px;
-		right: 16px;
-		display: flex;
-		justify-content: center;
-		padding: 16px;
-		box-sizing: border-box;
-		border-radius: 50%;
-		overflow: hidden;
-		background-color: $primary-color;
-		box-shadow: 0 0 40px;
-
-		.icon {
-			margin: 0;
-			fill: #fff;
-		}
+		display: none;
 	}
 
 	&__control {
-		&.active {
-			&::before {
-				transform: scaleY(100);
-			}
-
-			form {
-				transform: translateY(0);
-			}
-		}
-
-		&::before {
-			content: '';
-			height: 1px;
-			transition: transform 0.3s ease;
-		}
-
 		form {
-            position: fixed;
-            top: 40px;
-            left: 0;
-            z-index: 1;
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			flex-wrap: wrap;
-            padding: 64px 16px 16px;
-            background-color: #fff;
-            box-shadow: 0 0 40px;
-			transform: translateY(-100%);
-			transition: transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
-
-			> div {
-				width: 100%;
-			}
 
 			.search__input {
 				display: flex;
 				align-items: center;
+				width: calc(100% / 7 * 3 - 16px);
 
 				input {
 					width: 100%;
@@ -90,7 +45,6 @@
 
 			.search__sort {
 				overflow: unset;
-				margin: 16px 0 0;
 
 				.sort__control {
 					position: relative;
